--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <title>Turn-Based RPG in Phaser 3</title>        
         <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-        <script src="phaser.js"></script>       
+        <script src="phaser.js"></script>   
+        <script src="js/dice.js" ></script>
+        <script src="js/player.js" ></script>
         <script src="js/game.js"></script>        
         <style>
         html,
